[package]
name = "pokio"
version = "0.1.3"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[build-dependencies]
cmake = "0.1"

[dependencies]
once_cell = "1.18"
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
sha2 = "0.10"
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
rlp = "0.5"
k256 = "0.9"
num-bigint = "0.4.6"
num-traits = "0.2.19"
warp = "0.3"
futures = "0.3"
chrono = "0.4.39"
ethereum-types = "0.12"
secp256k1 = { version = "0.24", features = ["recovery"] }
sha3 = "0.10"
anyhow = "1.0.96"
nng = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
randomx-rs = "1.4.0"
dashmap = "5.5"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
